[gd_scene load_steps=4 format=3 uid="uid://c242e1wdurw1c"]

[ext_resource type="Script" uid="uid://cm8ctijfwsaha" path="res://Scripts/AI/Enemies/Flying/Flying_robot_ground_hit_AI.gd" id="1_i5588"]
[ext_resource type="PackedScene" uid="uid://bikl0506gl7ni" path="res://Scenes/Bodies/Enemies/Flying/Flying_robot_ground_hit.tscn" id="1_tfq33"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_748jx"]
size = Vector2(400, 202)

[node name="FlyingRobotGroundHit" type="Node2D"]
script = ExtResource("1_i5588")

[node name="Robot_body" parent="." instance=ExtResource("1_tfq33")]

[node name="RayCast2D_right" type="RayCast2D" parent="Robot_body"]
target_position = Vector2(300, 0)
collision_mask = 74

[node name="RayCast2D_left" type="RayCast2D" parent="Robot_body"]
target_position = Vector2(-300, 0)
collision_mask = 74

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="Robot_body"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(0, 10)
scale = Vector2(34.6, 10.5)
enable_node_path = NodePath("../..")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_748jx")
debug_color = Color(0, 0.596078, 0.701961, 0)

[connection signal="now_dead" from="Robot_body" to="." method="_on_robot_body_now_dead"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
